[project]
name = "labbench"
version = "0.35.3"

description = """\
    The `labbench` module provides API tools to support python scripting for laboratory automation.\
    The goal is to simplify the process of developing an experimental procedure into clear, concise, explainable, and reusable code.\
"""

authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
    {name = "Shane Allman"},
    {name = "Paul Blanchard"},
    {name = "Yao Ma", email = "yao.ma@nist.gov"}
]

maintainers = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]

requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {file = "LICENSE.md"}

dependencies = [
    # general modules
    "GitPython>=2.0",
    "psutil>=5.0",
    "validators>=0.20.0",
    "pip",
    "typing-extensions>=4.8.0",
    "click~=8.0",
    # numerical
    "numpy>=1.19",
    "pandas>=1.2.0,<2.2",
    # data formats
    "ruamel-yaml>=0.17.21",
    "feather-format>=0.4.0",
    "sqlalchemy>=1.4,<2",
    "pyarrow>=14",
    # Device backend support
    "pyserial>=3.0",
    "pyvicp",
    "pyvisa>=1.8",
    "pyvisa-py[usb,gpib-ctypes,serial,psutil]>=0.6",
    "pyvisa-sim>=0.5.1",
    "pywin32; sys_platform == 'win32'",
    "comtypes; sys_platform == 'win32'",
    "libusb1>=3.1.0",
    "libusb-package; sys_platform == 'win32'"
]

[project.optional-dependencies]
dotnet = ["pythonnet"]
jupyter = ["notebook", "jupyter", "ipywidgets", "ipython"]
pyvisa-py-extras = ["zeroconf"]
dev = [
    # python kernel bells and whistles
    "ipykernel",
    "pip",
    "ipython",
    # for compatibility outside hatch
    "ruff",
    # introspection and stub generation
    "ast_decompiler",
    "astor>=0.8.1",
    # publishing
    "twine",
]
doc = [
    # documentation
    "sphinx>=7",
    "toml",
    "jupytext>=1.6.0",
    "myst-nb>=1.0",
    "pyperf>=2.6.2",
    "mypy-extensions>=1.0.0",
    "mypy>=1.7.0",
]

[project.urls]
homepage = "https://github.com/usnistgov/labbench"
repository = "https://github.com/usnistgov/labbench"
documentation = "https://pages.nist.gov/labbench"
changelog = "https://github.com/usnistgov/labbench/blob/master/ChangeLog.md"

[project.scripts]
labbench = "labbench.cli.__main__:do_cli"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

#
# hatch project and build configuration
# 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/labbench"]

[tool.hatch.build.targets.sdist]
packages = ["src/labbench"]

[tool.hatch.version]
path = "src/labbench/_version.py"

# the default virtual environment
[tool.hatch.envs.default]
features = ["dev"]
path = ".venv"
python = "3.12"

[tool.hatch.envs.build]
features = ["dev"]
python = "3.12"

# test environment
[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "genbadge",
    "defusedxml",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
all = [
    "pytest --cov-report xml:doc/reports/coverage.xml --cov-report term --cov=labbench tests",
    "genbadge coverage -i doc/reports/coverage.xml -o doc/reports/coverage.svg -l"
]

[tool.coverage.run]
omit = ["src/labbench/testing/*", "src/labbench/cli/*", "src/labbench/notebooks.py"]

# documentation

[tool.hatch.envs.doc]
features = ["doc"]
env-vars = {TEXINPUTS="doc/latex"}

[tool.hatch.envs.doc.scripts]
html="sphinx-build -b html doc doc/html"
latex="sphinx-build -b latex doc doc/latex"
pdf="pdflatex doc/latex/labbench-api.tex --output-directory=doc" 
rst="sphinx-apidoc -F . -o doc"

[tool.ruff]
target-version = "py39"
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401", "F403", "E402"]
"**/*.py" = ["EM102","G004"]

